--- a/PeopleProTraining/PeopleProTraining.Dal/PeopleProTraining.Dal.csproj
+++ b/PeopleProTraining/PeopleProTraining.Dal/PeopleProTraining.Dal.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs">
+      <DependentUpon>PeopleProModels.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Department.cs">
+      <DependentUpon>PeopleProModels.tt</DependentUpon>
+    </Compile>
     <Compile Include="Employee.cs">
       <DependentUpon>PeopleProModels.tt</DependentUpon>
     </Compile>
@@ -62,6 +68,8 @@
     <Compile Include="Infrastructure\PeopleProRepo.cs" />
     <Compile Include="Interfaces\IPeopleProContext.cs" />
     <Compile Include="Interfaces\IPeopleProRepo.cs" />
+    <Compile Include="Models\Building.cs" />
+    <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="PeopleProModels.Context.cs">
       <AutoGen>True</AutoGen>
