--- a/PeopleProTraining/PeopleProTraining/PeopleProTraining.csproj
+++ b/PeopleProTraining/PeopleProTraining/PeopleProTraining.csproj
@@ -197,6 +197,7 @@
     <Content Include="Views\Departments\Index.cshtml" />
     <Content Include="Views\Employees\EditorTemplates\Employee.cshtml" />
     <Content Include="Views\Employees\EditorTemplates\DepartmentDepartmentId.cshtml" />
+    <Content Include="Views\Departments\_DepartmentRow.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
