--- a/PeopleProTraining/PeopleProTraining.Dal/PeopleProTraining.Dal.csproj
+++ b/PeopleProTraining/PeopleProTraining.Dal/PeopleProTraining.Dal.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Infrastructure\PeopleProRepo.cs" />
     <Compile Include="Interfaces\IPeopleProContext.cs" />
     <Compile Include="Interfaces\IPeopleProRepo.cs" />
+    <Compile Include="Models\Building.cs" />
+    <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="PeopleProModels.Context.cs">
       <AutoGen>True</AutoGen>
