--- a/PeopleProTraining/PeopleProTraining/bin/PeopleProTraining.dll.config
+++ b/PeopleProTraining/PeopleProTraining/bin/PeopleProTraining.dll.config
@@ -15,7 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="PeopleProTrainingDB" connectionString="Data Source=.;Initial Catalog=PeopleProTraining;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="PeopleProModelsContainer" connectionString="metadata=res://*/PeopleProModels.csdl|res://*/PeopleProModels.ssdl|res://*/PeopleProModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=PeopleProTraining;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PeopleProDataEntities" connectionString="metadata=res://*/Models.PeopleProModel.csdl|res://*/Models.PeopleProModel.ssdl|res://*/Models.PeopleProModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=PeopleProData;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
