Added employees unit tests

--- a/PeopleProTraining/PeopleProTrainingTests/PeopleProTrainingTests.csproj
+++ b/PeopleProTraining/PeopleProTrainingTests/PeopleProTrainingTests.csproj
@@ -66,6 +66,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Controllers\BuildingsControllerTests.cs" />
+    <Compile Include="Controllers\EmployeesControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
