--- a/PeopleProTraining/PeopleProTrainingTests/packages.config
+++ b/PeopleProTraining/PeopleProTrainingTests/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net46" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net46" />
+  <package id="NUnit" version="3.11.0" targetFramework="net46" />
 </packages>
