--- a/PeopleProTraining/PeoplePro.Core/PeoplePro.Core.csproj
+++ b/PeopleProTraining/PeoplePro.Core/PeoplePro.Core.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+  </ItemGroup>
+
 </Project>
