--- a/DatabaseSite/DatabaseSite/DatabaseSite.csproj
+++ b/DatabaseSite/DatabaseSite/DatabaseSite.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Shared\Partials\DepartmentPartial.cshtml" />
     <Content Include="Views\AjaxTest\Index.cshtml" />
     <Content Include="Views\Shared\Partials\CreateDepartmentPartial.cshtml" />
+    <Content Include="Views\Shared\Partials\TestingPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
