--- a/DatabaseSite/DatabaseSite/DatabaseSite.csproj
+++ b/DatabaseSite/DatabaseSite/DatabaseSite.csproj
@@ -146,7 +146,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AjaxTestController.cs" />
+    <Compile Include="Controllers\AjaxController.cs" />
     <Compile Include="Controllers\BuildingsController.cs" />
     <Compile Include="Controllers\BuildingsTestController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
